# tf-Tabular

./: README.md  pyproject.toml
examples/: abalone.py
tests/: test_tftabular.py
tftabular/: layers.py  models.py  utils.py
